unpackaged/main/default/objects/PDF_Document_Configuration__mdt/PDF_Document_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for PDF document generation by object type</description>
    <label>PDF Document Configuration</label>
    <pluralLabel>PDF Document Configurations</pluralLabel>
</CustomObject>