unpackaged/main/default/objects/PDF_Document_Configuration__mdt/fields/Page_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Page_Orientation__c</fullName>
    <description>Controls PDF page orientation (portrait or landscape)</description>
    <label>Page Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>portrait</fullName>
                <default>true</default>
                <label>Portrait</label>
            </value>
            <value>
                <fullName>landscape</fullName>
                <label>Landscape</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>