unpackaged/main/default/objects/PDF_Document_Configuration__mdt/fields/PDF_Count_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Count_Field_API_Name__c</fullName>
    <description>API name of the field that stores the PDF count for this object</description>
    <label>PDF Count Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>