unpackaged/main/default/objects/PDF_Document_Configuration__mdt/fields/Record_Id_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_Parameter__c</fullName>
    <description>The URL parameter name used to pass the record ID to the Visualforce page. Default is &#39;id&#39;. Change only if your VF page expects a different parameter name.</description>
    <label>Record Id Parameter</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>