unpackaged/main/default/objects/PDF_Document_Configuration__mdt/fields/Record_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Number_Field__c</fullName>
    <description>API name of the field containing the record number</description>
    <label>Record Number Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>