unpackaged/main/default/objects/PDF_Document_Configuration__mdt/fields/Template_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Page_Name__c</fullName>
    <description>The name of the Visualforce page that contains the PDF template (e.g., QuotePDFTemplate). Do not include the .page extension.</description>
    <label>Template Page Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>