unpackaged/main/default/objects/PDF_Document_Configuration__mdt/fields/Viewer_Header__c.field-meta.xml
<CustomField>
    <fullName>Viewer_Header__c</fullName>
    <description>The text to display in the header of the PDF viewer modal (e.g., Quote PDF Preview)</description>
    <label>Viewer Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>